# SDEcho

./:  README.md  .gitignore  README.md
baselines/dimenPrune/: CMakeLists.txt  main.cpp  table.cpp  table.h  test.sh  trendiff.cpp  trendiff.h
baselines/orderPrune/: CMakeLists.txt  main.cpp  pgsql.h  table.cpp  table.h  trendiff.cpp  (+1 more)
src/: CMakeLists.txt  SubVec.h  Topk.h  main.cpp  pgsql.cpp  sql1_5.sh  table.cpp  table.h  test.sh  test1.txt  trendiff.cpp  trendiff.h
src/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  cms2.txt  cms_x.txt  nat0529.txt  out.txt  run
src/bulid/execfg/: 1.txt  10.txt  13.txt  2.txt  3.txt  4.txt  5.txt  7.txt  8.txt  9.txt
src/bulid/execfg0001/: 1.txt  2.txt  3.txt
src/bulid/execfg0001_x/: 1.txt  2.txt  3.txt
src/bulid/execfg0005/: 1.txt  2.txt  3.txt
src/bulid/execfg0005_x/: 1.txt  3.txt
src/bulid/execfg001/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/bulid/execfg001_x/: 1.txt  2.txt  3.txt
src/bulid/execfg005/: 1.txt  2.txt  3.txt
src/bulid/execfg005_x/: 1.txt  2.txt  3.txt
src/bulid/execfg01/: 1.txt  11.txt  12.txt  14.txt  3.txt  4.txt  5.txt  6.txt  7.txt  9.txt
src/bulid/execfg01_x/: 1.txt  2.txt  3.txt
src/bulid/nat/: 1.txt  10_12.txt  1_3.txt  2.txt  3.txt  4.txt  4_9.txt  5.txt  race1.txt  race2.txt  race3.txt  race4.txt
src/bulid/x_data/: s0001_sql2_n2.txt  s0005_sql1_n2.txt  s001_sql1_n4.txt
src/x_data/: s0005_sql1_n3.txt  s0005_sql1_n4.txt  s001_sql1_n2.txt  s001_sql1_n3.txt  s001_sql2_n2.txt  s001_sql2_n3.txt  s001_sql2_n4.txt
(+89 files in other folders)
